--- a/src/Makefile.userprog
+++ b/src/Makefile.userprog
@@ -40,8 +40,8 @@ $(foreach prog,$(PROGS),$(eval $(call TEMPLATE,$(prog))))
 
 libc.a: $(LIB_OBJ)
 	rm -f $@
-	i386-elf-ar r $@ $^
-	i386-elf-ranlib $@
+	ar r $@ $^
+	ranlib $@
 
 clean::
 	rm -f $(PROGS) $(PROGS_OBJ) $(PROGS_DEP)
